--- a/Modulo6/P2_productos/miscapturas/package.json
+++ b/Modulo6/P2_productos/miscapturas/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "ts_tictactoe",
-  "version": "0.1.0",
+  "name": "my-app",
+  "version": "0.1.6",
   "private": true,
+  "disableHashCheck": true,
+  "usejest": true,
+  "capturesFolder": "miscapturas",
+  "capturesNumber": 2,
   "dependencies": {
-    "@nextui-org/react": "^2.0.24",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.40",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "framer-motion": "^10.16.0",
+    "autocorector": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+  "info": {
+    "githubURL": "REACT-UPM/P2_productos_MOOC",
+    "serverUrl": "https://moocbot.dit.upm.es/",
+    "courseId": "1313",
+    "assignmentId": "661"
   },
   "scripts": {
     "start": "react-scripts start",
