--- a/Modulo6/P2_productos/package.json
+++ b/Modulo6/P2_productos/package.json
@@ -11,12 +11,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "autocorector": "^3.1.2",
-    "bootstrap": "^5.3.1",
+    "bootstrap": "^4.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
   "info": {
